--- a/manifest.json
+++ b/manifest.json
@@ -11,18 +11,18 @@
 	"game": [
 		"bin-debug/core/scene/base/BaseEuiLayer.js",
 		"bin-debug/core/base/BaseClass.js",
-		"bin-debug/core/view/BaseView.js",
 		"bin-debug/core/scene/base/BaseSpriteLayer.js",
-		"bin-debug/core/base/ViewManager.js",
+		"bin-debug/core/view/BaseView.js",
 		"bin-debug/core/net/GameByteArray.js",
-		"bin-debug/game/module/jump/Stone.js",
+		"bin-debug/game/module/nostop/NostopMoveItem.js",
 		"bin-debug/core/base/TimerManager.js",
+		"bin-debug/core/base/ViewManager.js",
+		"bin-debug/core/scene/base/BaseScene.js",
 		"bin-debug/core/base/BaseSystem.js",
 		"bin-debug/core/scene/manager/LayerManager.js",
 		"bin-debug/core/sound/BaseSound.js",
 		"bin-debug/core/view/BaseEuiView.js",
 		"bin-debug/core/base/MessageCenter.js",
-		"bin-debug/core/scene/base/BaseScene.js",
 		"bin-debug/core/utils/DebugUtils.js",
 		"bin-debug/core/GameApp.js",
 		"bin-debug/core/consts/Keyboard.js",
@@ -52,7 +52,7 @@
 		"bin-debug/core/utils/CommonUtils.js",
 		"bin-debug/core/utils/DateUtils.js",
 		"bin-debug/core/utils/Debug.js",
-		"bin-debug/game/tips/TipsView.js",
+		"bin-debug/LoadingUI.js",
 		"bin-debug/core/utils/DeviceUtils.js",
 		"bin-debug/core/utils/DisplayUtils.js",
 		"bin-debug/core/utils/ErrorLog.js",
@@ -85,16 +85,16 @@
 		"bin-debug/game/module/jump/Jump.js",
 		"bin-debug/game/module/jump/JumpWin.js",
 		"bin-debug/game/module/jump/Player.js",
-		"bin-debug/ThemeAdapter.js",
+		"bin-debug/game/module/jump/Stone.js",
 		"bin-debug/game/module/main/MainWin.js",
 		"bin-debug/game/module/main/WelcomeWin.js",
 		"bin-debug/game/module/nostop/NostopEndWin.js",
 		"bin-debug/game/module/nostop/NostopMainItem.js",
-		"bin-debug/game/module/nostop/NostopMoveItem.js",
+		"bin-debug/ThemeAdapter.js",
 		"bin-debug/game/module/nostop/NostopPlayerWin.js",
 		"bin-debug/game/module/nostop/NostopWin.js",
 		"bin-debug/game/tips/TipsControl.js",
 		"bin-debug/game/tips/TipsItem.js",
-		"bin-debug/LoadingUI.js"
+		"bin-debug/game/tips/TipsView.js"
 	]
 }
